# organize

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
