[package]
name = "organize"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for organizing directories in *nix systems"
authors = ["thatjuan"]
license = "MIT"
repository = "https://github.com/thatjuan/organize"
homepage = "https://github.com/thatjuan/organize"
readme = "README.md"
keywords = ["cli", "filesystem", "directory", "organize", "flatten"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
